# python-didl-lite

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  README.rst  pylintrc  pyproject.toml  setup.cfg  setup.py  towncrier.toml  tox.ini
.github/workflows/: build.yaml  ci-cd.yml  pr_towncrier.yml
changes/: 35.feature  37.misc  38.misc  39.misc.rst  45.feature.rst
didl_lite/: __init__.py  didl_lite.py  utils.py
tests/: test_didl_lite.py
