[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "python-didl-lite"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
description = "DIDL-Lite (Digital Item Declaration Language) tools for Python"
readme = "README.rst"
authors = [{ name = "Steven Looman", email = "steven.looman@gmail.com" }]
keywords = [
    "DIDL",
    "DIDL-lite"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.6.0",
]
dynamic = ["version"]

[project.urls]
"GitHub: repo" = "https://github.com/StevenLooman/python-didl-lite"

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
]

[tool.setuptools]
packages = ["didl_lite"]

[tool.setuptools.dynamic]
version = { attr = "didl_lite.__version__" }

[tool.setuptools.package-data]
didl_lite = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["C901", "D", "E", "F", "I", "W"]
ignore = ["D202"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["didl_lite"]

[tool.deptry]
package_module_name_map = { "pytest" = "pytest" }

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest"]

[tool.pylint.format]
max-line-length = 119

[tool.pylint.basic]
good-names = ["otherItem", "storageMedium"]

[tool.codespell]
ignore-words-list = "wan"

[tool.coverage.run]
source = ["didl_lite"]
