[bumpversion]
current_version = 1.4.1
commit = True
tag = False
tag_name = {new_version}

[bumpversion:file:didl_lite/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
python-tag=py3

[metadata]
license_file = LICENSE.md

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-line-length = 119
max-complexity = 25
ignore =
	E501,
	W503,
	E203,
	D202,
	W504
noqa-require-code = True

[mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[codespell]
ignore-words-list = wan

[coverage:run]
source = didl_lite
